--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/View/MenuAccessory/MenuProfileTableViewCell.xib
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/View/MenuAccessory/MenuProfileTableViewCell.xib
@@ -22,6 +22,7 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dxo-Zj-Vbf">
                         <rect key="frame" x="124" y="55" width="188" height="39"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
