--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/View/MenuAccessory/MenuFeatureTableViewCell.xib
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/View/MenuAccessory/MenuFeatureTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14B17" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -12,8 +12,26 @@
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c8a-bN-jgn" id="zfI-xf-B5m">
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h27-f4-4Rg">
+                        <rect key="frame" x="42" y="11" width="136" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ic_feed.png" translatesAutoresizingMaskIntoConstraints="NO" id="eK1-4x-jOh">
+                        <rect key="frame" x="15" y="10" width="16" height="23"/>
+                    </imageView>
+                </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="_imgvIcon" destination="eK1-4x-jOh" id="nYP-CT-hs9"/>
+                <outlet property="_lblTitle" destination="h27-f4-4Rg" id="poc-gI-G6Q"/>
+            </connections>
             <point key="canvasLocation" x="287" y="287"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ic_feed.png" width="64" height="63"/>
+    </resources>
 </document>
