--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/View/FeedCell/FeedNormalViewCell.xib
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/View/FeedCell/FeedNormalViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14B17" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -170,8 +170,8 @@
                 <outlet property="_lblNumberLikesWidth" destination="fzL-V2-dd1" id="d29-Rd-LRS"/>
                 <outlet property="_lblSpotDistance" destination="zXd-bo-Ccd" id="ggU-Fw-IFn"/>
                 <outlet property="_lblZpotAddress" destination="xfY-DG-mMI" id="F0o-Uk-BeL"/>
-                <outlet property="_lblZpotName" destination="2Uh-WG-dIa" id="v0s-sn-aZg"/>
                 <outlet property="_lblZpotTime" destination="NBm-5t-DZa" id="hjA-Px-jYf"/>
+                <outlet property="_lblZpotTitle" destination="2Uh-WG-dIa" id="DGu-Lu-yWF"/>
             </connections>
             <point key="canvasLocation" x="272" y="347.5"/>
         </tableViewCell>
