--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/View/FeedCell/FeedSelectedViewCell.xib
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/View/FeedCell/FeedSelectedViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14B17" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -138,7 +138,7 @@
                 <outlet property="_lblName" destination="Cfp-6O-p6H" id="tgj-Kl-uHj"/>
                 <outlet property="_lblZpotAddress" destination="0A1-8a-IcP" id="Jh7-0t-LfX"/>
                 <outlet property="_lblZpotInfo" destination="gHk-Au-dtf" id="EFS-kA-1AM"/>
-                <outlet property="_lblZpotName" destination="oxZ-o3-lgF" id="AoW-0X-7cU"/>
+                <outlet property="_lblZpotTitle" destination="oxZ-o3-lgF" id="oRr-WF-TaX"/>
                 <outlet property="_tableViewComments" destination="DRp-uZ-S1a" id="Bx0-WV-InY"/>
                 <outlet property="_viewForMap" destination="YG4-Vi-Mvg" id="XCQ-ir-QOs"/>
             </connections>
