finish Feed Comment Detail view and API,not implement get old comments

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/View/FeedCell/FeedSelectedViewCell.xib
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/View/FeedCell/FeedSelectedViewCell.xib
@@ -194,7 +194,7 @@
                             <constraint firstItem="gHk-Au-dtf" firstAttribute="leading" secondItem="YG4-Vi-Mvg" secondAttribute="leading" id="zYQ-TD-Jqj"/>
                         </constraints>
                     </view>
-                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="DRp-uZ-S1a">
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="DRp-uZ-S1a">
                         <rect key="frame" x="0.0" y="291" width="320" height="180"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
